<resources>
    <string name="app_name">EH</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="movieDetails">Movie Details</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="director">Director</string>
    <string name="description">Description</string>

    <string name="cameraDetails">Seattle Traffic Cameras</string>
    <string name="title_activity_maps">Camera Locations</string>
    <string name="street">Street</string>
    <string name="title_activity_maps2">MapsActivity2</string>

    <string name="title_firebase_activity">Firebase User Data</string>

    <string name="button1_name">Movies</string>
    <string name="button2_name">Live Cameras</string>
    <string name="button3_name">Locations</string>
    <string name="button4_name">Dog</string>
    <string name="button5_name">Owl</string>
    <string name="button6_name">Cow</string>
    <string name="button7_name">Mouse</string>
    <string name="button8_name">Tiger</string>
    <string name="button9_name">Snake</string>
    <string name="button1_toast">Meow</string>
    <string name="button2_toast">Oink</string>
    <string name="button3_toast">Chirp</string>
    <string name="button4_toast">Bark</string>
    <string name="button5_toast">Hoot Hoot</string>
    <string name="button6_toast">Moo</string>
    <string name="button7_toast">Squeak</string>
    <string name="button8_toast">Growl</string>
    <string name="button9_toast">Hiss</string>

    <string name="connectError">Unable to connect to network</string>
    <string name="apiError">Unable to load live camera information</string>
</resources>